<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <include
            android:id="@+id/first"
            layout="@layout/topic_layout"
            app:title="@{@string/starting}" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/shield"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/lock_icon"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="@string/meetsid_intro_title"
                style="@style/MainTextViewStyle"
                android:layout_below="@id/shield"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_below="@id/titleText">

                <TextView
                    android:id="@+id/basicIntro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:text="@string/basic_intro"
                    android:textColor="@color/meetsid_text_grey" />

                <TextView
                    android:id="@+id/leanmoreText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/learn_more"
                    android:textColor="@color/meetsid_green" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/start_button" />

                <Button
                    android:id="@+id/tourButton"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_green_boarder_shape"
                    android:textColor="@color/meetsid_green"
                    android:text="@string/tour_button" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>