<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <include
            android:id="@+id/first"
            layout="@layout/topic_layout"
            app:title="@{@string/passcode_setup}" />

        <TextView
            android:id="@+id/instText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/passcode_ins"
            android:layout_below="@id/first"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/passcodePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/instText"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passcodeInput"
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/meetsid_text_grey"
                app:passwordToggleTintMode="screen"
                app:passwordToggleDrawable="@drawable/show_password_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passcodeText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:imeOptions="actionDone"
                    android:hint="Enter password"
                    android:letterSpacing="0.4"
                    android:drawablePadding="@dimen/_5sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmInput"
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/meetsid_text_grey"
                app:passwordToggleTintMode="screen"
                app:passwordToggleDrawable="@drawable/show_password_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:imeOptions="actionDone"
                    android:hint="Re-enter password"
                    android:letterSpacing="0.4" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/downloadText"
            android:text="@string/download_txt"
            android:textColor="@color/meetsid_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_below="@id/passcodePanel" />

        <TextView
            android:id="@+id/downloadRes"
            android:text="@string/download_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_below="@id/downloadText"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/continue_btn" />
        </LinearLayout>
    </RelativeLayout>
</layout>