<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.VoiceRecognition"
        tools:ignore="MissingConstraints"
        android:background="#FFFFFF">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/first"
                layout="@layout/topic_layout"
                app:title="@{@string/setup_voice}" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/voiceAnime"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="500dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/readText"
                            android:text="@string/voice_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:layout_marginRight="@dimen/_20sdp"
                            android:layout_marginTop="@dimen/_30sdp"
                            style="@style/MainTextViewStyle" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/topPanel"
                        android:visibility="invisible"
                        android:background="#FFFFFF"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/playBtn"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:background="@drawable/play_icon" />

                        <TextView
                            android:id="@+id/playIns"
                            android:text="@string/play"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/playBtn"
                            android:layout_centerHorizontal="true" />
                    </RelativeLayout>
                </FrameLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/meetsid_transparent">

                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/microphone"
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/voiceicon" />

                        <TextView
                            android:id="@+id/buttonIns"
                            android:text="@string/start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/microphone"
                            android:layout_centerHorizontal="true" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btnPanel"
                        android:visibility="invisible"
                        android:background="#FFFFFF"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:orientation="horizontal">

                            <Button
                                android:layout_weight="0.5"
                                android:id="@+id/btnRetry"
                                android:layout_width="match_parent"
                                android:layout_height="42dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/retry"
                                android:textColor="@color/meetsid_green"
                                android:background="@drawable/btn_green_boarder_shape" />

                            <Button
                                android:layout_weight="0.5"
                                android:id="@+id/btnUpload"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/upload"
                                android:background="@drawable/btn_green_fill_shape" />
                        </LinearLayout>
                    </RelativeLayout>
                </FrameLayout>
            </LinearLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
